<resources>
    <string name="action_logout">Logout</string>
    <string name="action_language">Language</string>
    <string name="app_name">WHO ANC</string>
    <string name="saving_dialog_title">Saving…</string>
    <string name="removing_dialog_title">Removing…</string>
    <string name="please_wait_message">Please wait</string>
    <string name="scan_qr_code">Scan QR code</string>
    <string name="select_language">Select Language</string>
    <string name="no_openmrs_id">No unique ids found. Click on the sync button to get more and if this error persists contact the system admin.</string>
    <string name="alphabetical_sort">Alphabetical (Name)</string>
    <string name="name">Name</string>
    <string name="dismiss">Cancel</string>
    <string name="dose_d">DOSE (D)</string>
    <string name="id">ID</string>
    <string name="patient_location">Location: %1$s</string>
    <string name="dose_given_date">Dose %1$s given %2$s</string>
    <string name="unauthorized">Please check the credentials</string>
    <string name="unauthorized_group">Your user group is not allowed to access this device</string>
    <string name="unknown_response">login failed. Try later</string>
    <string name="no_internet_connectivity">No internet connection. Please ensure data connectivity</string>
    <string name="login_text">Log In</string>
    <string name="show_password_text">Show password</string>
    <string name="complete">Complete</string>
    <string name="updating_dialog_title">Updating…</string>
    <string name="remove_from_register">REMOVE FROM REGISTER</string>
    <string name="url_separator">/</string>
    <string name="clients_key">clients</string>
    <string name="events_key">events</string>
    <string name="sync">Sync</string>
    <string name="sync_round_complete">Sync round complete&#8230;</string>
    <string name="device_timezone_changed">"The device's timezone changed. Please login again."</string>
    <string name="device_time_changed">"The device's time has changed. Please login again."</string>
    <string name="sync_failed_no_internet">Sync failed. Check your internet connection.</string>
    <string name="syncing">Syncing...</string>
    <string name="sync_failed">Sync failed</string>
    <string name="retry">Retry</string>
    <string name="sync_complete">Sync complete</string>
    <string name="sync_">Sync%1$s</string>
    <string name="last_sync">(last %1$s)</string>
    <string name="manual_sync_triggered">Manual Sync triggered&#8230;</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="registration_info">Registration info</string>
    <string name="opensrp_id">OpenSRP ID</string>
    <string name="anc">WHO ANC</string>
    <string name="error_unable_to_start_form">An error occurred when starting the form</string>
    <string name="search_name_or_id">Search name or ID</string>
    <string name="filter">Filter</string>
    <string name="clear_filters">CLEAR FILTERS</string>
    <string name="apply">APPLY</string>
    <string name="done">DONE</string>
    <string name="has_tasks_due">Has tasks due</string>
    <string name="risky_pregnancy">Risky pregnancy</string>
    <string name="syphilis_positive">Syphilis pregnancy</string>
    <string name="hiv_positive">HIV pregnancy</string>
    <string name="hypertensive">Hypertensive</string>
    <string name="updated_recent_first">Updated (recent first)</string>
    <string name="ga_older_first">GA (older first)</string>
    <string name="ga_younger_first">GA (younger first)</string>
    <string name="id_sort">ID</string>
    <string name="first_name_a_to_z">First name (A to Z)</string>
    <string name="first_name_z_to_a">First name (Z to A)</string>
    <string name="last_name_a_to_z">Last name (A to Z)</string>
    <string name="last_name_z_to_a">Last name (Z to A)</string>
    <string name="no_location_picker">No location selected </string>
    <string name="advanced_search">Advanced Search</string>
    <string name="out_and_inside">Outside and inside my health facility</string>
    <string name="requires_internet_connection">(requires internet connection)</string>
    <string name="my_catchment_area">My health facility only</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="anc_id">ANC ID</string>
    <string name="id_number">ANC ID</string>
    <string name="edd">Edd</string>
    <string name="exp_date_of_delivery">Expected date of delivery</string>
    <string name="dob">Dob</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="mobile_phone_number">Mobile phone number</string>
    <string name="phone_number">Phone number</string>
    <string name="alternate_contact_name">Alternate contact name</string>
    <string name="alt_contact_name">Alternate contact name</string>
    <string name="search">Search</string>
    <string name="search_results">Search Results</string>
    <string name="searching_dialog_title">Searching…</string>
    <string name="searching_dialog_message">Please wait</string>
    <string name="matching_results">%1$s matches</string>
    <string name="anc_clients">ANC clients</string>
    <string name="counseling_resources">Counseling resources</string>
    <string name="site_characteristics">Site characteristics</string>
    <string name="contact_summary">Contact Summary</string>
    <string name="sync_data">Sync data</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="antenatal_care_module">Antenatal Care \n Module</string>
    <string name="anc_id_text">ID: %1$s</string>
    <string name="age_text">Age: %1$s</string>
    <string name="ga_text">GA: %1$d weeks</string>
    <string name="bullet">\u2022</string>
    <string name="overview">OVERVIEW</string>
    <string name="contacts">CONTACTS</string>
    <string name="tasks">TASKS</string>
    <string name="new_registration_saved">New registration saved &#x21;</string>
    <string name="registration_info_updated">Registration info updated &#x21;</string>
    <string name="call">Call</string>
    <string name="start_contact">Start Contact</string>
    <string name="close_anc_record">Close ANC Record</string>
    <string name="copy_to_clipboard">Copy to clipboard</string>
    <string name="no_matching_woman_found_on_this_device">No matching woman found on this device.</string>
    <string name="go_to_advanced_search">Go to advanced search</string>
    <string name="cancel">Cancel</string>
    <string name="yellow">YELLOW</string>
    <string name="red">RED</string>
    <string name="record_birth">Record birth</string>
    <string name="the_qr_code_scanner_button">The QR Code Scanner button</string>
    <string name="woman_filter">Filter</string>
    <string name="clients">%1$d clients</string>
    <string name="client">%1$d client</string>
    <string name="register">Register</string>
    <string name="library">Library</string>
    <string name="me">Me</string>
    <string name="clients_menu">Clients</string>
    <string name="_0_clients_sort_updated">0 Clients (Sort: updated)</string>
    <string name="reason_for_coming_facility"><font fgcolor="black">Reason for coming to facility? </font><font fgcolor="red">*</font></string>
    <string name="first_contact">First contact</string>
    <string name="scheduled_contact">Scheduled contact</string>
    <string name="specific_complaint">Specific complaint</string>
    <string name="specific_complaints"><font fgcolor="black">Specific complaint(s) </font><font fgcolor="red">*</font></string>
    <string name="abnormal_discharge">Abnormal vaginal discharge</string>
    <string name="altered_skin_color">Altered skin colour</string>
    <string name="changes_in_bp">Changes in blood pressure</string>
    <string name="constipation">Constipation</string>
    <string name="contractions">Contractions</string>
    <string name="cough">Cough</string>
    <string name="depressive_anxious">Depressive / anxious</string>
    <string name="dizziness">Dizziness</string>
    <string name="domestic_violence">Domestic violence</string>
    <string name="extreme_pelvic_pain">Extreme pelvic pain - can\'t walk (symphysis pubis dysfunction)</string>
    <string name="fever">Fever</string>
    <string name="full_abdominal_pain">Full abdominal pain</string>
    <string name="flu_symptoms">Flu symptoms</string>
    <string name="fluid_loss">Fluid loss</string>
    <string name="headache">Headache</string>
    <string name="heartburn">Heartburn</string>
    <string name="leg_cramps">Leg cramps</string>
    <string name="leg_pain">Leg pain</string>
    <string name="leg_redness">Leg redness</string>
    <string name="low_back_pelvic_pain">Low back and pelvic pain</string>
    <string name="nausea_vomiting_diarrhea">Nausea / vomiting / diarrhea</string>
    <string name="no_fetal_movement">No fetal movement</string>
    <string name="oedema">Oedema</string>
    <string name="other_bleeding">Other bleeding</string>
    <string name="other_pain">Other pain</string>
    <string name="other_psychological_symptoms">Other psychological symptoms</string>
    <string name="other_skin_disorder">Other skin disorder</string>
    <string name="other_types_of_voilence">Other types of violence</string>
    <string name="dysuria">Pain during urination (dysuria)</string>
    <string name="pruritus">Pruritus</string>
    <string name="reduced_fetal_movement">Reduced or poor fetal movement</string>
    <string name="shortness_of_breath">Shortness of breath</string>
    <string name="tiredness">Tiredness</string>
    <string name="trauma">Trauma</string>
    <string name="bleeding">Vaginal bleeding</string>
    <string name="visual_disturbance">Visual disturbance</string>
    <string name="complaint_other_specify">Other</string>
    <string name="danger_signs"><font fgcolor="black">Danger signs </font><font fgcolor="red">*</font></string>
    <string name="danger_none">None</string>
    <string name="danger_bleeding">Bleeding vaginally</string>
    <string name="central_cyanosis">Central cyanosis</string>
    <string name="convulsing">Convulsing</string>
    <string name="danger_fever">Fever</string>
    <string name="headache_visual_disturbance">Headache and visual disturbance</string>
    <string name="imminent_delivery">Imminent delivery</string>
    <string name="labour">Labour</string>
    <string name="looks_very_ill">Looks very ill</string>
    <string name="severe_vomiting">Severe vomiting</string>
    <string name="severe_pain">Severe pain</string>
    <string name="severe_abdominal_pain">Severe abdominal pain</string>
    <string name="unconscious">Unconscious</string>
    <string name="any_treatment">Any treatment given\nbefore referral?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="population_characteristics">Population characteristics</string>
    <string name="continue_to_your_client_list">CONTINUE TO YOUR CLIENT LIST</string>
    <string name="your_site_characteristics_for_facility_name">Your site characteristics for %1$s are all set.</string>
    <string name="site_characteristics_are_shared_for_all">Site characteristics are shared by all OpenSRP users at the facility. You can update site characteristics at any time.</string>
    <string name="go_back_to_site_characteristics">Go back to site characteristics</string>
</resources>