<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/referral_dialog_padding">

    <org.smartregister.view.customcontrols.CustomFontTextView
        android:id="@+id/txt_title_label"
        style="@style/CustomFontTextViewStyle.ClientList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:lines="2"
        android:paddingStart="0dp"
        android:text="@string/any_treatment"
        android:textColor="@color/text_black"
        android:textSize="@dimen/referral_dialog_title_text_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/refer_yes"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/referral_dialog_padding"
        android:text="@string/yes"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/text_black"
        android:textSize="@dimen/referral_dialog_text_size" />

    <Button
        android:id="@+id/refer_no"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:gravity="start|center_vertical"
        android:paddingStart="@dimen/referral_dialog_padding"
        android:text="@string/no"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceSmall"
        android:textColor="@color/text_black"
        android:textSize="@dimen/referral_dialog_text_size" />

</LinearLayout>