<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="8dp">

        <ImageView
            android:id="@+id/btn_back_to_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/ic_arrow_back_light_blue" />

        <TextView
            android:id="@+id/txt_title_label"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="14dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:singleLine="true"
            android:text="@string/go_back_to_site_characteristics"
            android:clickable="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#0F95D6"
            android:textStyle="normal"
            android:focusable="true" />


    </LinearLayout>


    <LinearLayout
        android:id="@+id/top_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/site_characteristics_facility_name"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="17dp"
            android:text="@string/your_site_characteristics_for_facility_name"
            android:textColor="#229cd9"
            android:textSize="24sp"
            android:typeface="sans" />


        <TextView
            android:id="@+id/site_characteristics_text_view"
            android:layout_width="310dp"
            android:layout_height="wrap_content"
            android:maxWidth="200dp"
            android:text="@string/site_characteristics_are_shared_for_all"
            android:textColor="#229cd9"
            android:textSize="16sp"
            android:typeface="sans" />
    </LinearLayout>


    <TextView
        android:id="@+id/btn_site_characteristics_home_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:gravity="right"
        android:padding="20dp"
        android:text="@string/continue_to_your_client_list"
        android:textAllCaps="true"
        android:textColor="#2432c3"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
</FrameLayout>