<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_view"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:layout_gravity="start"
    android:background="#2c2c2c"
    android:fitsSystemWindows="true"
    app:itemBackground="@drawable/nav_view_background"
    app:itemIconTint="@android:color/white"
    app:itemTextColor="@android:color/white"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    app:theme="@style/AncAppTheme.NoActionBar.NavigationDrawerStyle">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <include layout="@layout/nav_header_base" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="@dimen/smart_register_client_divider_height"
            android:src="#474747" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="vertical">

                <org.smartregister.view.customcontrols.CustomFontTextView
                    android:id="@+id/anc_register"
                    style="@style/CustomFontTextViewStyle.ClientList.Light.twoline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/nav_view_item_padding"
                    android:text="@string/anc_clients"
                    android:textColor="@color/white"
                    android:textSize="@dimen/nav_view_text_size" />

                <org.smartregister.view.customcontrols.CustomFontTextView
                    android:id="@+id/counseling_resources"
                    style="@style/CustomFontTextViewStyle.ClientList.Light.twoline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/nav_view_item_padding"
                    android:text="@string/counseling_resources"
                    android:textColor="@color/white"
                    android:textSize="@dimen/nav_view_text_size" />

                <org.smartregister.view.customcontrols.CustomFontTextView
                    android:id="@+id/site_characteristics"
                    style="@style/CustomFontTextViewStyle.ClientList.Light.twoline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/nav_view_item_padding"
                    android:text="@string/site_characteristics"
                    android:textColor="@color/white"
                    android:textSize="@dimen/nav_view_text_size" />

                <org.smartregister.view.customcontrols.CustomFontTextView
                    android:id="@+id/population_characteristics"
                    style="@style/CustomFontTextViewStyle.ClientList.Light.twoline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:padding="@dimen/nav_view_item_padding"
                    android:text="@string/population_characteristics"
                    android:textColor="@color/white"
                    android:textSize="@dimen/nav_view_text_size" />

            </LinearLayout>

            <org.smartregister.view.customcontrols.CustomFontTextView
                android:id="@+id/sync_data"
                style="@style/CustomFontTextViewStyle.ClientList.Light.twoline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:padding="@dimen/nav_view_item_padding"
                android:text="@string/sync_data"
                android:textColor="@color/white"
                android:textSize="@dimen/nav_view_text_size" />

        </RelativeLayout>

    </LinearLayout>
</android.support.design.widget.NavigationView>